src/Components/Subscription/subscription.module.css
/* кнопка, которая открывает подписку на рассылку */
.subBtn {
  padding: 16px 24px;
  font-family: Eastman;
  line-height: 20px;
  font-weight: 400;
  font-size: 18px;
  background: linear-gradient(
    132.1deg,
    rgb(147, 231, 54) -28.477%,
    rgb(19, 161, 108) 105.673%
  );
  border-radius: 50px;
  display: inline-block;
  text-align: center;
  color: rgb(255, 255, 255);
  max-width: 305px;
  opacity: 1;
  overflow: hidden;
  transform: scale(1);
  transition: all 2s cubic-bezier(0.4, 0, 0.2, 1);
  max-height: 52px;
  will-change: transform, opacity, height;
  /* will-change — это CSS-свойство, которое позволяет браузеру заранее оптимизировать производительность анимаций, указывая, какие свойства элемента могут измениться в ближайшее время. Это помогает улучшить плавность анимаций и уменьшить нагрузку на процессор.
Применение свойств

    transform: Указывает, что элемент будет изменять свои трансформации (например, перемещение, вращение). Это позволяет браузеру применять оптимизации, такие как использование GPU.

    opacity: Указывает, что прозрачность элемента будет изменяться. Это позволяет плавно анимировать эффекты прозрачности.

    height: Указывает, что высота элемента может изменяться. Это может помочь с анимацией, когда элемент растягивается или сжимается.

Пример использования
css

.element {
  will-change: transform, opacity, height;
}

Заключение

Использование will-change помогает браузеру заранее подготовиться к изменениям, что может улучшить производительность анимаций и сделать их более плавными. Однако не стоит использовать это свойство слишком часто, чтобы избежать излишней нагрузки на память. */
  animation: fadeIn 0.9s ease-out both;
  -webkit-animation: fadeIn 0.9s ease-out both;
}
/* класс для исчезания кнопки открытия */
.subBtn.disappear {
  pointer-events: none;
  animation: fadeOut 0.9s ease-out both;
}

/* !ВНИМАНИЕ, анимация через @keyframes проще в написании, меньше кода и значительно плавнее! */
/* Анимация исчезновения */
@keyframes fadeOut {
  0% {
    opacity: 1;
    transform: scale(1);
    height: 56px;
    padding: 16px 24px;
    /* margin: initial; */
  }
  100% {
    opacity: 0;
    transform: scale(0.9);
    height: 0;
    padding-top: 0;
    padding-bottom: 0;
    margin-top: 0;
    margin-bottom: 0;
  }
}

/* Анимация появления */
@keyframes fadeIn {
  0% {
    opacity: 0;
    transform: scale(0.9);
    height: 0;
    padding-top: 0;
    padding-bottom: 0;
    margin-top: 0;
    margin-bottom: 0;
  }
  100% {
    opacity: 1;
    transform: scale(1);
    height: 56px;
    padding: 16px 24px;
    margin: initial;
  }
}
/* блок subscription в котором находится сама форма  */
/* .subscription { */
.modalContainer {
  position: fixed;
  width: 100%;
  /*Начальная высота*/
  height: 0;
  top: 0;
  left: 0;
  background: #67dd6777;
  /* центруем */
  display: flex;
  justify-content: center;
  align-items: center;
  /*Скрываем содержимое*/
  overflow: hidden;
  /*Анимация для высоты и прозрачности*/
  transition: height 1.8s ease, opacity 2.8s ease;
  -webkit-transition: height 1.8s ease, opacity 2.8s ease;
  -moz-transition: height 1.8s ease, opacity 2.8s ease;
  -ms-transition: height 1.8s ease, opacity 2.8s ease;
  -o-transition: height 1.8s ease, opacity 2.8s ease;
  opacity: 0;
  overflow: auto;
}
.modalContainer.open {
  height: 100vh;
  /*Полная высота при открытии*/
  opacity: 1;
  /*Полная видимость*/
  transition: height 2.8s ease, opacity 0.8s ease;
  -webkit-transition: height 2.8s ease, opacity 0.8s ease;
  -moz-transition: height 2.8s ease, opacity 0.8s ease;
  -ms-transition: height 2.8s ease, opacity 0.8s ease;
  -o-transition: height 2.8s ease, opacity 0.8s ease;
}
.subscription {
  padding: 20px;
  width: 80%;
  max-width: 600px;
}
/* форма */
.form {
  position: relative;
  width: 80%;
  /* text-align: center; */
  top: 20px;
}
.subscription h1 {
  font-size: 45px;
  font-weight: 700;
  margin-bottom: 20px;
}
.wrapperP {
  font-size: 35px;
  font-weight: 700;
  color: blue;
  margin-bottom: 20px;
}
.agree {
  font-size: 25px;
  font-weight: 700;
  color: blue;
  margin-bottom: 20px;
}
hr {
  height: 2px;
  background-color: blue;
  margin-bottom: 20px;
}
/* кнопка закрытия окна подписки */
.btn__close {
  position: absolute;
  font-size: 50px;
  font-weight: 200;
  top: 25px;
  right: 42px;
  cursor: pointer;
  display: inline-block;
  box-shadow: none;
  background-color: transparent;
  background: none;
  width: 55px;
  height: 55px;
  color: red;
}
.btn__close:active {
  transform: rotate(360deg);
  transition: transform 0.5s ease;
  -webkit-transition: transform 0.5s ease;
  -moz-transition: transform 0.5s ease;
  -ms-transition: transform 0.5s ease;
  -o-transition: transform 0.5s ease;
  -webkit-transform: rotate(360deg);
  -moz-transform: rotate(360deg);
  -ms-transform: rotate(360deg);
  -o-transform: rotate(360deg);
}
/* поле формы */
/* .container {
  padding: 20px;
} */

/* input[type="e-mail"],
input[type="password"] { */
input {
  width: 100%;
  padding: 10px;
  display: inline-block;
  margin: 10px 0px 20px;
  background-color: rgba(255, 217, 0, 0.438);
}
input:focus {
  outline: none;
  background-color: white;
}
input[type="checkbox"] {
  margin-top: 20px;
}

label {
  color: red;
  font-size: 20px;
}
/* кнопки внизу */
.cansel__btn,
.sign__btn {
  position: relative;
  background-color: blueviolet;
  color: white;
  font-weight: 700;
  padding: 10px 20px;
  border-radius: 10px;
  cursor: pointer;
  transition: 0.4s;
  -webkit-transition: 0.4s;
  -moz-transition: 0.4s;
  -ms-transition: 0.4s;
  -o-transition: 0.4s;
}
.cansel__btn {
  margin-right: 15px;
}
/* еще один вариант реализации активной кнопки */
.cansel__btn:active,
.sign__btn:active {
  transform: translateY(10px);
}

